# Atoms-Demo

./: .dockerignore  .editorconfig  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  README.md  SUBMISSION.md  railway.toml  start.sh
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agents/: graph.py  iterate.py  nodes.py  prompts.py  state.py
backend/app/: auth.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  chat.py  credits.py  projects.py  share.py
backend/eval/: run_eval.py
backend/eval/fixtures/: golden_prompts.json
backend/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_exceptions.py  test_generate_state.py  test_nodes.py  test_schemas.py  test_seed.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/api/: client.ts.html  index.html
frontend/coverage/components/: AgentMessage.tsx.html  AgentTimeline.tsx.html  PlanCard.tsx.html  ProtectedRoute.tsx.html  RaceModePanel.tsx.html  index.html
frontend/coverage/src/: App.tsx.html  index.html  previewUtils.ts.html
frontend/src/: App.tsx  extractHtml.test.ts  index.css  previewUtils.test.ts  previewUtils.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: AgentMessage.test.tsx  AgentMessage.tsx  AgentTimeline.test.tsx  AgentTimeline.tsx  AppSidebar.tsx  CodePanel.tsx  PlanCard.tsx  (+8 more)
(+23 files in other folders)
