[project]
name = "atoms-demo-backend"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "agents", "tests", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["ragas: RAGAS evaluation tests (requires LLM)"]

[tool.coverage.run]
source = ["app", "agents"]
omit = ["tests/*", "eval/*"]

[tool.coverage.report]
fail_under = 70
